恢复丢失文件

--- a/source/_posts/2017-04-28-hexo博客快速搭建.md
+++ b/source/_posts/2017-04-28-hexo博客快速搭建.md
@@ -112,7 +112,7 @@ at TCP.onread (net.js:569:26) ```
  
 这里更多的内容
 ### 12.一些问题
-如果发现git上传失败就要考虑一下仓库地址用户名密码是否正确，下面就是我填错仓库地址后报的<font color="#4590a3" size = "2px">403</font> 错误
+--如果发现git上传失败就要考虑一下仓库地址用户名密码是否正确，下面就是我填错仓库地址后报的<font color="#4590a3" size = "2px">403</font> 错误
 
 ```bash
 FATAL Something&#39;s wrong. Maybe you can find the solution here: http://hexo.io/docs/troubleshooting.html
@@ -126,3 +126,6 @@ at maybeClose (internal/child_process.js:877:16)
 at Process.ChildProcess._handle.onexit (internal/child_process.js:226:5)
 FATAL remote: Permission to imsofter/imsofter.github.io.git denied to king-one.
 ```
+--hexo本地测试运行重启后页面空白,提示 :``` WARN No layout: index.html```
+我遇到你的是因为主题目录下变空白的，重新克隆了主题仓库，然后hexo generate; 之后就OK了。
+
